--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^7.0.0",
+    "ngx-mask": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
