fix: fix component send-form

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^3.1.1",
     "frontend": "file:",
+    "jwt-decode": "^4.0.0",
     "mdb-angular-ui-kit": "^7.0.0",
     "ngx-mask": "^16.4.2",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "^18.2.10",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.8.5",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
